--- a/plugins/Jumbotron/config.json
+++ b/plugins/Jumbotron/config.json
@@ -1,6 +1,6 @@
 {
     "main_before":{
         "tpl":"main.html",
-        "context":{"text_0":"Siteasy","text_1":"Simplest site generator","button_0_text":"Quick start"}
+        "context":{"text_0":"Siteasy","text_1":"Simplest site generator","button_0_text":"Quick start","button_0_link":"/Docs/Quick start.html"}
     }
 }
