add support of assign link to cate

--- a/config.json
+++ b/config.json
@@ -9,6 +9,7 @@
     "cates":{
             "News": {}, 
             "Docs":{
+                "link_to":"quick start",
                 "order": [
                     "quick start.md",
                     "structure.md",
